# swc_capstone

./: .gitignore  CMakeLists.txt  pc_build.sh
config/: visual_odometry.yaml
include/: camera.hpp  common_includes.hpp  config.hpp  frame.hpp  landmark.hpp  logger.hpp  optimizer.hpp  ransac.hpp  tester.hpp  timer.hpp  utils.hpp  visual_odometry.hpp  visualizer.hpp
output_logs/: trajectory.csv
src/: camera.cpp  config.cpp  frame.cpp  landmark.cpp  logger.cpp  main.cpp  optimizer.cpp  ransac.cpp  test_module.cpp  tester.cpp  timer.cpp  utils.cpp  view_gt.cpp  view_positions.cpp  visual_odometry.cpp  visualizer.cpp
system_test/: gt_trajectory.txt  rotated_gt_trajectory.txt  rotated_gt_trajectory_KITTI_format.txt  rotated_gt_trajectory_TUM_format.txt
system_test/backups/6 boards (two 8x6 boards)/: gt_trajectory.txt
system_test/backups/multiple 5x7 boards/: gt_trajectory.txt
system_test/backups/single 5x7 board/: gt_trajectory.txt
trajectory_archive/: KITTI_00_gt.txt  KITTI_00_gt_5.txt  ORB-SLAM3_traj_30.txt  fixed_trajectory_10.txt  fixed_trajectory_100.txt  fixed_trajectory_ORB_100.txt  fixed_trajectory_ORB_match_filter(505040)_100.txt  fixed_trajectory_SIFT_100.txt  kp_filter_trian3_BA.txt  match_filter_trian2_BA.txt  match_filter_trian2_BA_off.txt  match_filter_trian3_BA.txt  match_filter_trian3_BA_off.txt  no_filter_trian2_BA.txt  no_filter_trian3_BA.txt  orb_slam3_features_traj_30.txt  trajectory_mark1.txt  trajectory_mark1_100.txt  trajectory_mark2.txt  trajectory_mark2_rev.txt  trajectory_mark2_rev_100.txt  vo_lower_bound.txt
